# chiwei-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DIAGNOSIS_REPORT.md  LICENSE  MANIFESTO.md  Makefile  README.md  package.json
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  grep-baselines.json
apps/sandbox-worker/: Dockerfile  app.yaml  pyproject.toml
apps/sandbox-worker/app/: config.py  executor.py  main.py
apps/sandbox-worker/tests/: test_executor.py
apps/tagger-service/: .gitignore  README.md  pyproject.toml
apps/tagger-service/app/: main.py  qwen_vl_describe.py  settings.py  wd14_infer.py
apps/tagger-service/app/pipeline/: cpu_taggers.py  merge.py  nsfw_score.py  ocr_clean.py  orchestrate.py  qwen_stage.py  run_mvp.py  wd14_tagger.py
apps/tagger-service/app/service/: auth.py  callbacks.py  image_loader.py  inference.py  path_validation.py  remote_client.py  results.py  runner.py  task_manager.py  task_store.py
apps/tagger-service/deploy/: DEPLOYMENT.md  check-local.sh  doctor-host.sh  package.sh  push-release.sh  render-systemd.sh  tagger-backend.env.example  tagger-backend.service.example  tagger-entry.env.example  tagger-entry.service.example
apps/tagger-service/tests/: test_pipeline_cpu_taggers.py  test_pipeline_merge.py  test_pipeline_nsfw_score.py  test_pipeline_ocr_clean.py  test_pipeline_orchestrate.py  test_pipeline_qwen_stage.py  test_pipeline_run_mvp.py  test_pipeline_wd14_tagger.py  test_qwen_vl_describe.py  test_service_api_validation.py  test_service_auth.py  test_service_callbacks.py  test_service_image_loader.py  test_service_results.py  test_service_runner.py  test_service_task_manager.py  test_service_task_store.py
apps/tool-service/: .gitignore  Dockerfile  pyproject.toml
apps/tool-service/app/: main.py
apps/tool-service/app/api/: donjin.py  extraction.py  file_pipeline.py  image.py  image_pipeline.py  router.py
apps/tool-service/app/config/: config.py
apps/tool-service/app/infrastructure/: database.py  lark_client.py  redis_client.py  redis_lock.py  tos_client.py
apps/tool-service/app/middleware/: auth.py  metrics.py
apps/tool-service/app/orm/: bot_config.py
apps/tool-service/app/services/: attachment_pipeline.py  extraction_service.py  image_pipeline.py  image_service.py
apps/tool-service/tests/: test_attachment_pipeline.py  test_file_pipeline_api.py  test_image_download_hardening.py  test_image_pipeline_api.py  test_image_pipeline_uses_shared_core.py  test_image_service.py  test_lark_client_credentials.py  test_lark_download_resource.py
docs/: agent-service-refactor.md  akao-memory-system.md  build-convention.md  chiwei-system-design.md  ci-pipeline-roadmap.md  config-management.md  dynamic-config.md  lite-registry-design.md  (+3 more)
(+1744 files in other folders)
