[project]
name = "tagger-service"
version = "0.1.0"
description = "Bare-metal GPU image tagging service for Pixiv assets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "imagehash>=4.3.1",
    "dghs-imgutils>=0.19.0",
    "huggingface-hub>=0.36.0",
]

[project.optional-dependencies]
backend-cpu = [
    "onnxruntime>=1.20.0",
]
backend-gpu = [
    "nvidia-cudnn-cu12>=9,<10",
    "onnxruntime-gpu>=1.20.0",
]
qwen = [
    "transformers==4.57.1",
    "vllm==0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
