[project]
name = "tool-service"
version = "0.1.0"
description = "Image processing and utility service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.10.1",
    "jieba>=0.42.1",
    "redis>=7.2.1",
    "tos>=2.9.0",
    "httpx>=0.28.1",
    "lark-oapi>=1.5.3",
    "sqlalchemy>=2.0.47",
    "asyncpg>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.12.5",
]
